인접,형제 선택자

--- a/index.html
+++ b/index.html
@@ -47,5 +47,17 @@
         <div>Div 2</div>
         <div>Div 3</div>
     </div>
+
+    <!-- 인접 선택자 input 과 사용하기 -->
+    <div class="hobby-choice">
+        <input type="radio" name="gade">
+        <span>야구</span>
+        <input type="radio" name="gade">
+        <span>축구</span>
+        <input type="radio" name="gade">
+        <span>농구</span>
+        <input type="radio" name="gade">
+        <span>수영</span>
+    </div>
 </body>
 </html>
